--- a/src/app/(components)/OptimizeTable/styles.module.css
+++ b/src/app/(components)/OptimizeTable/styles.module.css
@@ -27,6 +27,7 @@
   border-bottom: 1px solid var(--color-table-grid);
   border-right: 1px solid var(--color-table-grid);
   overflow: hidden;
+  background: #fff;
 }
 
 .tableCellContent {
