--- a/src/app/(components)/Cells/styles.module.css
+++ b/src/app/(components)/Cells/styles.module.css
@@ -1,11 +1,13 @@
 .cell {
-  line-height: 35px;
+  line-height: 34px;
   height: 35px;
   border: 1px solid transparent;
-  padding-left: 10px;
-  padding-right: 10px;
 }
 
 .focus {
   border: 1px solid #e00;
+}
+
+.change {
+  background: #f6e58d !important;
 }
