feat: code editor to support dark mode

--- a/src/components/table-cell/styles.module.css
+++ b/src/components/table-cell/styles.module.css
@@ -8,6 +8,10 @@
   border: 1px solid #e00;
 }
 
+:global(.dark) .change {
+  @apply bg-yellow-600;
+}
+
 .change {
-  background: #f6e58d !important;
+  @apply bg-yellow-200;
 }
