--- a/src/components/table-optimized/styles.module.css
+++ b/src/components/table-optimized/styles.module.css
@@ -25,10 +25,8 @@
 
 .tableContainer td,
 .tableContainer th {
-  border-bottom: 1px solid var(--color-table-grid);
-  border-right: 1px solid var(--color-table-grid);
+  @apply border-b border-r;
   overflow: hidden;
-  background: #fff;
 }
 
 .tableCellContent {
@@ -44,7 +42,6 @@
   padding: 0px 10px;
   height: 35px;
   line-height: 35px;
-  background: rgb(241, 245, 249);
   text-align: left;
   display: flex;
   flex-direction: row;
@@ -72,8 +69,12 @@
   opacity: 0.5;
 }
 
+:global(.dark) .selectedRow td {
+  @apply bg-gray-800;
+}
+
 .selectedRow td {
-  background-color: var(--color-table-row-selected);
+  @apply bg-gray-200;
 }
 
 .newRow td {
@@ -81,8 +82,12 @@
   color: var(--color-text);
 }
 
+:global(.dark) .removedRow td {
+  @apply bg-red-800;
+}
+
 .removedRow td {
-  background-color: var(--color-table-row-removed);
+  @apply bg-red-200;
 }
 
 .stickyColumn {
