feat: improve code editor with better auto complete and coloring

--- a/gui/src/index.css
+++ b/gui/src/index.css
@@ -99,6 +99,14 @@
 }
 
 /* ------------------------------- */
+.cm-table-name {
+  color: #e84393;
+}
+
+.dark .cm-table-name {
+  color: #fd79a8;
+}
+/* ------------------------------- */
 
 .libsql-window-tab .libsql-window-close {
   visibility: hidden;
