--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -258,3 +258,40 @@ For Markdown Side
 .mdx-content a {
   @apply text-blue-500 underline;
 }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+.fade-view {
+  animation:
+    fadeIn ease-in-out both,
+    fadeOut ease-in forwards;
+  animation-range:
+    cover 30% contain 50%,
+    contain 90% cover 100%;
+  animation-timeline: view();
+}
+
+.fade-sticky {
+  position: sticky;
+  bottom: 0;
+  background-image: linear-gradient(to top, var(--background) 40%, transparent);
+}
