--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  overscroll-behavior-x: none;
+}
+
 :root {
   --color-table-grid: #eee;
   --color-table-change: #f6e58d;
