feat: fixing and allow re-arrange header for optimize table

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -189,6 +189,10 @@ body {
   z-index: 10;
 }
 
+.libsql-table th.sticky {
+  z-index: 20;
+}
+
 .libsql-resizer {
   position: absolute;
   right: 0;
