--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -264,7 +264,7 @@ For Markdown Side
 }
 
 .mdx-content pre {
-  @apply bg-gray-100 dark:bg-gray-700 p-4 leading-5 rounded overflow-x-auto;
+  @apply bg-gray-200 dark:bg-gray-700 p-4 leading-5 rounded overflow-x-auto m-0;
 }
 
 .mdx-content p {
@@ -273,26 +273,4 @@ For Markdown Side
 
 .mdx-content a {
   @apply text-blue-500 underline;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-    transform: scale(0.95);
-  }
-
-  100% {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
-@keyframes fadeOut {
-  0% {
-    opacity: 1;
-  }
-
-  100% {
-    opacity: 0;
-  }
 }
