--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,10 +58,12 @@ body {
     --ring: 222.2 84% 4.9%;
 
     --radius: 0.5rem;
+
+    --selected: rgb(229, 229, 229);
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
+    --background: rgb(10, 10, 10);
     --foreground: 210 40% 98%;
 
     --color-surface: #1f1f1f;
@@ -91,6 +93,8 @@ body {
     --border: 210 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
+
+    --selected: rgb(38, 38, 38);
   }
 }
 
