--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@ body {
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
+    --background: #fff;
     --foreground: 222.2 84% 4.9%;
 
     --color-surface: #fff;
@@ -58,10 +58,13 @@ body {
     --ring: 222.2 84% 4.9%;
 
     --radius: 0.5rem;
+
+    --selected: rgb(229, 229, 229);
+    --scroll-bar: #e2e8f0;
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
+    --background: rgb(10, 10, 10);
     --foreground: 210 40% 98%;
 
     --color-surface: #1f1f1f;
@@ -91,7 +94,30 @@ body {
     --border: 210 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
+
+    --selected: rgb(38, 38, 38);
+    --scroll-bar: #1e2d3b;
   }
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  padding: 2px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--scroll-bar);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--scroll-bar);
 }
 
 @layer base {
