--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@ body {
     --secondary: #f1f5f9;
     --secondary-foreground: #444;
 
-    --muted: 210 40% 96.1%;
+    --muted: #eee;
     --muted-foreground: #888;
 
     --accent: #f1f5f9;
