feat: Scrollable window tabs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -575,3 +575,25 @@ For Markdown Side
     U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
     U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
+.window-tab-scrollbar {
+  overflow: hidden;
+  overflow: block;
+}
+
+.window-tab-scrollbar:hover {
+  overflow: auto;
+  overflow-y: hidden;
+}
+
+.window-tab-scrollbar::-webkit-scrollbar {
+  height: 3px;
+}
+
+.window-tab-scrollbar:hover::-webkit-scrollbar-thumb {
+  background-color: #555; /* Color of the scrollbar thumb on hover */
+}
+
+.window-tab-scrollbar:hover::-webkit-scrollbar-thumb:hover {
+  background-color: #888; /* Color of the scrollbar thumb on hover */
+}
