Fix layout board tool (#369)
* try to use outerbase board data with our board

* refactor: improve board canvas item mapping and tooltip structure

* refactor: enhance toggle item styling based on edit mode

* plug chart inside

* require workspace to load

* refactor: menu layout and create refresh board

* refactor: improve chart component imports and style definitions

* add header and loading

* refactor: update BoardTool and BoardProvider components

* refactor: improve board canvas item mapping and save edit layout

* refactor: remove console.log statement

* refactor: improve board page editor and board component

* feat: Export  interface for external use

* feat: Refactor chart management functions and integrate context for layout operations

* refactor the board storage

* feat: Add board filter input component and dialog

* postgres create table support and fixed board tool position

* disable auto increment when database is postgres

* improve create table pg

---------

Co-authored-by: Visal .In <invisal@gmail.com>
Co-authored-by: sokphaladam <sokphaladam@sokphaladams-MacBook-Air.local>

--- a/src/components/board/board-style.css
+++ b/src/components/board/board-style.css
@@ -120,7 +120,7 @@
 
 .reveal {
   opacity: 0;
-  transform: translateY(20px);
+  transform: translateY(0);
 }
 
 .animate-revealMenu {
@@ -129,8 +129,8 @@
 
 @keyframes revealMenu {
   0% {
-    opacity: 100%;
-    transform: translateY(100px) translateX(-40%);
+    opacity: 0%;
+    transform: translateY(-100px) translateX(-40%);
   }
   100% {
     opacity: 100%;
